--- a/test-trace.html
+++ b/test-trace.html
@@ -21,7 +21,7 @@ Test trace<br/>
 	trace.warn(null);
 
 	var obj = {
-		abc: 'abs>k"<dld>sd<c',
+		abc: 'a&bs>k"<dld>sd<c',
 		num: 456,
 		arr: [456,567],
 		nul: null,
@@ -54,7 +54,7 @@ Test trace<br/>
 	trace(/^85/g.toString());
 	trace(new RegExp('sj\\/d', 'gi'));
 	trace(/^8s<kdk5/g);
-	trace(/^8s<kdk5/g, 'somenote');
+	trace(/^8s<kd&&k5/g, 'somenote');
 	var c34 = '双引号"end &#34;', c39 = "单引号'end &#39;";
 	trace(c34, c39);
 	trace(c39);
